[package]
name = "nawi"
version = "0.1.0-alpha"
edition = "2024"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
amaru-kernel = { git = "https://github.com/pragma-org/amaru.git" }
amaru-plutus = { git = "https://github.com/pragma-org/amaru.git"  }

anyhow = "1.0.100"
hex = "0.4.3"
blockfrost = "1.1.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
blockfrost-openapi = "0.1.75"
figment = { version = "0.10.19", features = ["env", "toml"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
futures = "0.3.31"
chrono = "0.4.42"
